; ModuleID = '/home/carl/AnghaBench/radare2/shlr/tcc/extr_libtcc.c_tcc_add_file_internal.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/tcc/extr_libtcc.c_tcc_add_file_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }

@AFF_PRINT_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"file '%s' not found\00", align 1
@AFF_PREPROCESS = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [2 x i8] c"c\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"h\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"cparse\00", align 1
@.str.4 = private unnamed_addr constant [23 x i8] c"unrecognized file type\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tcc_add_file_internal(%struct.TYPE_6__* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = call i8* @tcc_fileextension(i8* %10)
  store i8* %11, i8** %8, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 0
  %14 = load i8, i8* %13, align 1
  %15 = icmp ne i8 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %3
  %17 = load i8*, i8** %8, align 8
  %18 = getelementptr inbounds i8, i8* %17, i32 1
  store i8* %18, i8** %8, align 8
  br label %19

19:                                               ; preds = %16, %3
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @tcc_open(%struct.TYPE_6__* %20, i8* %21)
  store i32 %22, i32* %9, align 4
  %23 = load i32, i32* %9, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %35

25:                                               ; preds = %19
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* @AFF_PRINT_ERROR, align 4
  %28 = and i32 %26, %27
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %33

30:                                               ; preds = %25
  %31 = load i8*, i8** %6, align 8
  %32 = call i32 (i8*, ...) @tcc_error(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %31)
  br label %33

33:                                               ; preds = %30, %25
  %34 = load i32, i32* %9, align 4
  store i32 %34, i32* %4, align 4
  br label %80

35:                                               ; preds = %19
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 1
  %38 = bitcast i32* %37 to i8***
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %39, i32 0, i32 0
  %41 = load i8*, i8** %6, align 8
  %42 = call i32 @strdup(i8* %41)
  %43 = call i32 @dynarray_add(i8*** %38, i32* %40, i32 %42)
  %44 = load i32, i32* %7, align 4
  %45 = load i32, i32* @AFF_PREPROCESS, align 4
  %46 = and i32 %44, %45
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %51

48:                                               ; preds = %35
  %49 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %50 = call i32 @tcc_preprocess(%struct.TYPE_6__* %49)
  store i32 %50, i32* %9, align 4
  br label %77

51:                                               ; preds = %35
  %52 = load i8*, i8** %8, align 8
  %53 = getelementptr inbounds i8, i8* %52, i64 0
  %54 = load i8, i8* %53, align 1
  %55 = icmp ne i8 %54, 0
  br i1 %55, label %56, label %68

56:                                               ; preds = %51
  %57 = load i8*, i8** %8, align 8
  %58 = call i32 @PATHCMP(i8* %57, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %60, label %68

60:                                               ; preds = %56
  %61 = load i8*, i8** %8, align 8
  %62 = call i32 @PATHCMP(i8* %61, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  %63 = icmp ne i32 %62, 0
  br i1 %63, label %64, label %68

64:                                               ; preds = %60
  %65 = load i8*, i8** %8, align 8
  %66 = call i32 @PATHCMP(i8* %65, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %67 = icmp ne i32 %66, 0
  br i1 %67, label %71, label %68

68:                                               ; preds = %64, %60, %56, %51
  %69 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %70 = call i32 @tcc_compile(%struct.TYPE_6__* %69)
  store i32 %70, i32* %9, align 4
  br label %77

71:                                               ; preds = %64
  %72 = load i32, i32* %9, align 4
  %73 = icmp slt i32 %72, 0
  br i1 %73, label %74, label %76

74:                                               ; preds = %71
  %75 = call i32 (i8*, ...) @tcc_error(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.4, i64 0, i64 0))
  br label %76

76:                                               ; preds = %74, %71
  br label %77

77:                                               ; preds = %76, %68, %48
  %78 = call i32 (...) @tcc_close()
  %79 = load i32, i32* %9, align 4
  store i32 %79, i32* %4, align 4
  br label %80

80:                                               ; preds = %77, %33
  %81 = load i32, i32* %4, align 4
  ret i32 %81
}

declare dso_local i8* @tcc_fileextension(i8*) #1

declare dso_local i32 @tcc_open(%struct.TYPE_6__*, i8*) #1

declare dso_local i32 @tcc_error(i8*, ...) #1

declare dso_local i32 @dynarray_add(i8***, i32*, i32) #1

declare dso_local i32 @strdup(i8*) #1

declare dso_local i32 @tcc_preprocess(%struct.TYPE_6__*) #1

declare dso_local i32 @PATHCMP(i8*, i8*) #1

declare dso_local i32 @tcc_compile(%struct.TYPE_6__*) #1

declare dso_local i32 @tcc_close(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
